Add product type filtering to catalogue search
